Added Python creation with SWIG
Signed-off-by: Marius Messerschmidt <marius.messerschmidt@googlemail.com>

--- a/configkit/Makefile
+++ b/configkit/Makefile
@@ -7,3 +7,14 @@ tester:
 	gcc -std=c99 test.c -o test -ljetspace-configkit
 clean:
 	rm test
+
+python:
+	swig -python config.i
+	gcc -c -fPIC config.c config_wrap.c -I /usr/include/python3.4
+	ld -shared config.o config_wrap.o -o _configkit.so
+	rm *.o
+	rm config_wrap.c
+
+pythonclear:
+	rm _configkit.so
+	rm *.py
