--- a/logkit/Makefile
+++ b/logkit/Makefile
@@ -7,7 +7,7 @@ build:
 clean:
 	rm test
 tester:
-	gcc  -Wall test.c -o test -ljetspace-logkit `pkg-config --libs --cflags glib-2.0`
+	gcc -rdynamic  -Wall test.c -o test -ljetspace-logkit `pkg-config --libs --cflags glib-2.0`
 
 python:
 	swig -python log.i
