--- a/logkit/Makefile
+++ b/logkit/Makefile
@@ -1,13 +1,15 @@
 build:
 	gcc -c -Wall -Werror -fPIC log.c -o log.o -std=c99 -g `pkg-config --libs --cflags glib-2.0`
 	gcc -shared -o ../libs/libjetspace-logkit.so log.o
+	gcc -c -Wall -Werror -fPIC log.c -o log.o -std=c99 -g -D _LOGKIT_DISABLE_GLIB_SUPPORT
+	gcc -shared -o ../libs/libjetspace-logkit-noglib.so log.o
 	rm log.o
 	cp log.h ../header/logkit.h
 
 clean:
 	rm test
 tester:
-	gcc --std=c99 -rdynamic  -Wall test.c -o test -ljetspace-logkit `pkg-config --libs --cflags glib-2.0`
+	gcc --std=c99 -rdynamic  -Wall test.c -o test -ljetspace-logkit-noglib
 
 python:
 	swig -python log.i
