--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,25 @@
 sudo: required
 language: c
 
-script: sudo bash test.sh
+addons:
+  apt:
+    packages:
+      - check
+
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
+script: make && make install && make test
+
+before_install:
+  - pip install --user codecov
+
+after_success:
+  - "cp configkit/*c* ."
+  - "cp test/*c* ."
+  - "sudo chmod +rw * -R"
+  - "ls -R" #Debug
+  - "codecov"
