Fix for travisCI
Signed-off-by: Marius Messerschmidt <marius.messerschmidt@googlemail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ before_install:
   - pip install --user codecov
 
 after_success:
-  - "cp configkit/*c* ."
-  - "cp test/*c* ."
+  - "cp configkit/*.gcno ."
+  - "cp test/*.gcno ."
   - "sudo chmod +rw * -R"
   - "ls -R" #Debug
   - "codecov"
