Some more improvements / fixes for CI
Signed-off-by: Marius Messerschmidt <marius.messerschmidt@googlemail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 
 after_success:
   - "cp configkit/*c* ."
-  - "cp test/*c* ."
+  - "cp tests/*c* ."
   - "sudo chmod +rw * -R"
   - "ls -R" #Debug
   - "codecov"
